# danbooru-cpp-grabber

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  TREE  aclocal.m4  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
build-cross-win/: Makefile
build-cross-win/core/: CMakeLists.txt  platform.cmake  src
build-cross-win/modules/: CMakeLists.txt  platform.cmake  src
build-cross-win32/: CMakeLists.txt  platform.cmake
build-native/: Makefile
build-native/core/: CMakeLists.txt  Config
build-native/modules/: include  src  tests
cmake/scripts/: core.cmake  modules.cmake
cmake/tests/: tests.cmake
cmake/tests/collection/functions/: dlopen.cmake  ioctl.cmake
cmake/tests/collection/libs/: curl.cmake
cmake/tests/collection/meta/: modular.cmake
cmake/tests/include/: config.cmake  config.h
cmake/toolchains/: mingw.cmake
include/: Makefile.am  Makefile.in
include/danbooru-cpp-grabber/: Makefile.am  Makefile.in
modules/: Makefile.am  Makefile.in
modules/Boards/Danbooru/: DanbooruXML.cpp
modules/Downloaders/: Makefile.am  Makefile.in
modules/Downloaders/Curl/: Makefile.am  Makefile.in
old/Generic/Module/: Unix.cpp  Win32.cpp
old/Headers/danbooru-cpp-grabber/: Module.h  ModuleDownloader.h
old2/Headers/danbooru-cpp-grabber/Module/: Module.h
scripts/: core  cross-win.platform  mainscript
scripts/Config/: config.h.cmake  configuration.cmake
src/: .#specs  Makefile.am  Makefile.in  specs
src/Core/: .#ModuleManager.cpp  Application.cpp  Application.h  CLIInteractor.cpp  Core.cpp  Core.h  CoreInteractorLogger.h  Grabber.h  IO.cpp  IO.h  Logger.cpp  Logger.h  Main.cpp  Makefile.cmake  Modular.h  ModuleCollection.cpp  ModuleHandlerUnix.cpp  ModuleLoader.cpp  ModuleLoader.h  ModuleManager.cpp  ModuleManager.h  ModuleSymer.cpp  ModuleSymer.h  OptParser.cpp  OptParser.h  OptionParser.cpp  OptionParser.h  oldCOre.h
src/Core/Baka/: Core.h  Logger.h  ModuleManager.cpp
src/Core/Config/: Config.h
src/Core/Loaders/: Downloader.cpp  Downloader.h  Generic.h  Modular.cpp
src/Core/Logger/: Logger.cpp
src/Core/Modular/: Downloader.cpp  Downloader.h  Generic.cpp  Generic.h  Manager.cpp  Manager.h  Module.cpp  Module.h  ModuleUnix.cpp  ModuleWin.cpp
src/Core/Modular/olds/: Manager.h
src/Core/Modules/: Downloader.h  Module.h  ModuleUnix.cpp  ModuleWin.cpp
src/Core/zz/: Application.h  CLI.cpp  CLIInteractor.h  Config.h  Interactor.h  Logger.h  ModuleManager.h
src/Eve/Core/: Core.h  CoreLogger.cpp  CoreLogger.h  Logger.cpp  Logger.h  Main.cpp  Makefile.cmake  Modular.cpp  Modular.h  ModuleLoader.h  ModuleManager.h
src/Eve/Include/dcppg/Interfaces/: CoreInteractor.h  CoreInteractorLogger.h  CoreInteractorModule.h  Module.h  ModuleInterface.h
src/Evo/Core/: .#OptParser.cpp  Application.cpp  Application.h  Main.cpp  Makefile.cmake  Modular.cpp  ModuleLoader.h  ModuleManager.h
src/Evo/Include/danbooru-cpp-grabber/Generic/: Config.h  Hash.h  Logger.h  Option.h
src/Evo/Include/danbooru-cpp-grabber/Module/: ModuleInterface.h
src/Evo/Modules/Downloaders/Curl/: Makefile.cmake
src/Evo/Modules/Interfaces/CLI/: CLI.cpp  Makefile.cmake
src/EvolutionOld/Core/: CLIInteractor.cpp  Grabber.cpp  Grabber.h  Logger.cpp  Main.cpp  Makefile.cmake  ModuleCollection.cpp
src/EvolutionOld/Core/Baka/: Help.cpp  Logger.cpp  Main.cpp  Main.h  MakeInstances.cpp  ModuleGeneric.cpp  ModuleGeneric.h  ModuleLoader.cpp  ModuleLoader.h  ModuleManager.h  ModuleSpecificDownloader.cpp  ModuleSpecificDownloader.h  ParseArguments.cpp
src/EvolutionOld/Core/Loaders/: Downloader.cpp  Downloader.h  Generic.cpp  Generic.h  Modular.cpp  Modular.h
src/EvolutionOld/Include/danbooru-cpp-grabber/: DownloaderInterface.h  Module.h
src/EvolutionOld/Include/danbooru-cpp-grabber/Generic/: OptParser.h
src/EvolutionOld/Modules/: Makefile.cmake
src/EvolutionOld/Modules/Downloaders/: Makefile.cmake
src/EvolutionOld/Modules/Downloaders/Curl/: Curl.cpp  Curl.h
src/EvolutionOld/Old/Core/: Main.cpp  Makefile.cmake
src/EvolutionOld/Old/Core/Config/: Config.h
src/EvolutionOld/Old/Core/Modular/: Generic.h  Manager.cpp
src/Headers/danbooru-cpp-grabber/: BoardInterface.h  DownloaderInterface.h  Module.h
src/Include/danbooru-cpp-grabber/Generic/: Logger.h  OptParser.h  Stringify.h  URLEncoder.h
src/Include/danbooru-cpp-grabber/Module/: Module.h  ModuleInterface.h
src/Include/dcppg/CoreInteract/: CoreInteract.h  CoreLogger.h  CoreModule.h  CoreOption.h
src/Include/dcppg/Data/: Hash.h  ModuleInfo.h  Option.h
src/Include/dcppg/Interfaces/: CoreInteractor.h  CoreInteractorLogger.h  Module.h  ModuleInterface.h
src/Include/dcppg/Interfaces/old/: CoreInteractor.h  CoreInteractorLogger.h  CoreInteractorModule.h  CoreInteractorModuleInterface.h  Module.h  ModuleInterface.h
src/Modular/: Generic.cpp
src/Modules/: Makefile.cmake
src/Modules/Boards/Danbooru/: DanbooruXML.cpp  DanbooruXML.h
src/Modules/Downloader/Curl/: Curl.cpp  Curl.h
src/Modules/Downloaders/Curl/: #Curl.h#  Curl.cpp
src/Modules/Interfaces/: Makefile.cmake
src/Modules/Interfaces/CLI/: CLI.cpp  CLI.h  Makefile.cmake
src/Old/Core/Logger/: Logger.h
src/Old/Core/Modular/: Downloader.cpp  Downloader.h  Manager.h  Module.h
src/core/: Makefile.cmake  configuration.cpp  grabber.cpp  grabber.hpp  main.cpp  optionparser.cpp  optionparser.hpp  optparser.cpp
src/core/Modular/: Generic.h
src/core/data/: dlinked.cpp
src/include/dcppg/data/cppspecific/: dlinked.hpp  module_info.hpp  option.hpp
src/include/dcppg/data/generic/: dlinked.h  module_info.h  option.h
src/modules/Boards/Danbooru/: DanbooruXML.h
src/modules/Downloaders/Curl/: Curl.h
